--- a/firstapp/public/pages/home.html
+++ b/firstapp/public/pages/home.html
@@ -2,9 +2,13 @@
     <head>
         <title>Express Web app`</title>
         <link href="styles.css" rel="stylesheet">
+        <link href="bootstrap.min.css" rel="stylesheet">
+        <script src="jquery.min.js"></script>
+        <script src="bootstrap.min.js"></script>
     </head>
     <body>
         
-                   <h1>Express APP</h1>
+                   <div class="alert alert-info"><h3>Express APP</h3></div>
+
     </body>
 </html>
