--- a/firstapp/public/pages/home.html
+++ b/firstapp/public/pages/home.html
@@ -8,7 +8,33 @@
     </head>
     <body>
         
-                   <div class="alert alert-info"><h3>Express APP</h3></div>
+        <div class="alert alert-info"><h3>Express APP</h3></div>
+        <div id="form">
+        <form action="store" method="post">
+            <table>
+                <tr>
+                    <th>Sno</th>
+                    <td><input type="text" name="sno"></td>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                    <td><input type="text" name="name"></td>
+                </tr>
+                <tr>
+                    <th>City</th>
+                    <td><input type="text" name="city"></td>
+                </tr>
+                <tr>
+                   
+                    <td style="text-align: center;" colspan=2>
+                       <button type="submit" class="btn btn-success">Add Person</button>
+                    </td>
+                </tr>
+
+            </table>
+         </form>
+
+        </div>
 
     </body>
 </html>
