--- a/firstapp/public/pages/home.html
+++ b/firstapp/public/pages/home.html
@@ -36,5 +36,8 @@
 
         </div>
 
+        <div id="iframe">
+            <iframe src="/people-page" style="height:800px;width:1000px;margin:20px;padding-right: 30px; padding-top: 20px;"></iframe>
+        </div>
     </body>
 </html>
